// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExtensionComponentView /> renders local correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExtensionComponentView
    bindIframeToParent={[Function]}
    channelId="twitch"
    configuration={Object {}}
    extension={
        Object {
            "authorName": "test",
            "bitsEnabled": false,
            "clientId": "mockClientId",
            "description": "description",
            "hasChatSupport": false,
            "iconUrl": "iconUrl",
            "iconUrls": Object {
              "square100": "100x100",
            },
            "id": "id",
            "name": "name",
            "requestIdentityLink": false,
            "sku": "sku",
            "state": "Released",
            "summary": "summary",
            "token": "token",
            "vendorCode": "vendorCode",
            "version": "0.1",
            "views": Object {
              "component": Object {
                "aspectHeight": 3000,
                "aspectWidth": 2500,
                "canLinkExternalContent": false,
                "viewerUrl": "https://test:8080",
                "zoom": false,
                "zoomPixels": 100,
              },
              "config": Object {
                "canLinkExternalContent": false,
                "viewerUrl": "https://test:8080",
              },
              "liveConfig": Object {
                "canLinkExternalContent": false,
                "viewerUrl": "https://test:8080",
              },
              "mobile": Object {
                "viewerUrl": "https://test:8080",
              },
              "panel": Object {
                "canLinkExternalContent": false,
                "height": 300,
                "viewerUrl": "https://test:8080",
              },
              "videoOverlay": Object {
                "canLinkExternalContent": false,
                "viewerUrl": "https://test:8080",
              },
            },
            "whitelistedConfigUrls": Array [
              "foo",
            ],
            "whitelistedPanelUrls": Array [
              "bar",
            ],
          }
    }
    frameSize={
        Object {
            "height": 600,
            "width": 800,
          }
    }
    id="1"
    installationAbilities={
        Object {
            "isChatEnabled": true,
          }
    }
    isLocal={true}
    position={
        Object {
            "x": 10,
            "y": 10,
          }
    }
    role="Broadcaster"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        style={
                Object {
                        "border": "1px solid #7D55C7",
                        "height": "10px",
                        "left": "20px",
                        "position": "absolute",
                        "top": "20px",
                        "width": "10px",
                      }
        }
>
        <ExtensionFrame
                bindIframeToParent={[Function]}
                channelId="twitch"
                className="view"
                configuration={Object {}}
                extension={
                        Object {
                                "authorName": "test",
                                "bitsEnabled": false,
                                "clientId": "mockClientId",
                                "description": "description",
                                "hasChatSupport": false,
                                "iconUrl": "iconUrl",
                                "iconUrls": Object {
                                  "square100": "100x100",
                                },
                                "id": "id",
                                "name": "name",
                                "requestIdentityLink": false,
                                "sku": "sku",
                                "state": "Released",
                                "summary": "summary",
                                "token": "token",
                                "vendorCode": "vendorCode",
                                "version": "0.1",
                                "views": Object {
                                  "component": Object {
                                    "aspectHeight": 3000,
                                    "aspectWidth": 2500,
                                    "canLinkExternalContent": false,
                                    "viewerUrl": "https://test:8080",
                                    "zoom": false,
                                    "zoomPixels": 100,
                                  },
                                  "config": Object {
                                    "canLinkExternalContent": false,
                                    "viewerUrl": "https://test:8080",
                                  },
                                  "liveConfig": Object {
                                    "canLinkExternalContent": false,
                                    "viewerUrl": "https://test:8080",
                                  },
                                  "mobile": Object {
                                    "viewerUrl": "https://test:8080",
                                  },
                                  "panel": Object {
                                    "canLinkExternalContent": false,
                                    "height": 300,
                                    "viewerUrl": "https://test:8080",
                                  },
                                  "videoOverlay": Object {
                                    "canLinkExternalContent": false,
                                    "viewerUrl": "https://test:8080",
                                  },
                                },
                                "whitelistedConfigUrls": Array [
                                  "foo",
                                ],
                                "whitelistedPanelUrls": Array [
                                  "bar",
                                ],
                              }
                }
                frameId="frameid-1"
                installationAbilities={
                        Object {
                                "isChatEnabled": true,
                              }
                }
                isLocal={true}
                isPopout={false}
                mode="viewer"
                type="component"
        />
</div>,
      "className": "view component-view nono_zone",
      "style": Object {
        "height": "600px",
        "width": "800px",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <ExtensionFrame
          bindIframeToParent={[Function]}
          channelId="twitch"
          className="view"
          configuration={Object {}}
          extension={
                    Object {
                              "authorName": "test",
                              "bitsEnabled": false,
                              "clientId": "mockClientId",
                              "description": "description",
                              "hasChatSupport": false,
                              "iconUrl": "iconUrl",
                              "iconUrls": Object {
                                "square100": "100x100",
                              },
                              "id": "id",
                              "name": "name",
                              "requestIdentityLink": false,
                              "sku": "sku",
                              "state": "Released",
                              "summary": "summary",
                              "token": "token",
                              "vendorCode": "vendorCode",
                              "version": "0.1",
                              "views": Object {
                                "component": Object {
                                  "aspectHeight": 3000,
                                  "aspectWidth": 2500,
                                  "canLinkExternalContent": false,
                                  "viewerUrl": "https://test:8080",
                                  "zoom": false,
                                  "zoomPixels": 100,
                                },
                                "config": Object {
                                  "canLinkExternalContent": false,
                                  "viewerUrl": "https://test:8080",
                                },
                                "liveConfig": Object {
                                  "canLinkExternalContent": false,
                                  "viewerUrl": "https://test:8080",
                                },
                                "mobile": Object {
                                  "viewerUrl": "https://test:8080",
                                },
                                "panel": Object {
                                  "canLinkExternalContent": false,
                                  "height": 300,
                                  "viewerUrl": "https://test:8080",
                                },
                                "videoOverlay": Object {
                                  "canLinkExternalContent": false,
                                  "viewerUrl": "https://test:8080",
                                },
                              },
                              "whitelistedConfigUrls": Array [
                                "foo",
                              ],
                              "whitelistedPanelUrls": Array [
                                "bar",
                              ],
                            }
          }
          frameId="frameid-1"
          installationAbilities={
                    Object {
                              "isChatEnabled": true,
                            }
          }
          isLocal={true}
          isPopout={false}
          mode="viewer"
          type="component"
/>,
        "style": Object {
          "border": "1px solid #7D55C7",
          "height": "10px",
          "left": "20px",
          "position": "absolute",
          "top": "20px",
          "width": "10px",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "bindIframeToParent": [Function],
          "channelId": "twitch",
          "className": "view",
          "configuration": Object {},
          "extension": Object {
            "authorName": "test",
            "bitsEnabled": false,
            "clientId": "mockClientId",
            "description": "description",
            "hasChatSupport": false,
            "iconUrl": "iconUrl",
            "iconUrls": Object {
              "square100": "100x100",
            },
            "id": "id",
            "name": "name",
            "requestIdentityLink": false,
            "sku": "sku",
            "state": "Released",
            "summary": "summary",
            "token": "token",
            "vendorCode": "vendorCode",
            "version": "0.1",
            "views": Object {
              "component": Object {
                "aspectHeight": 3000,
                "aspectWidth": 2500,
                "canLinkExternalContent": false,
                "viewerUrl": "https://test:8080",
                "zoom": false,
                "zoomPixels": 100,
              },
              "config": Object {
                "canLinkExternalContent": false,
                "viewerUrl": "https://test:8080",
              },
              "liveConfig": Object {
                "canLinkExternalContent": false,
                "viewerUrl": "https://test:8080",
              },
              "mobile": Object {
                "viewerUrl": "https://test:8080",
              },
              "panel": Object {
                "canLinkExternalContent": false,
                "height": 300,
                "viewerUrl": "https://test:8080",
              },
              "videoOverlay": Object {
                "canLinkExternalContent": false,
                "viewerUrl": "https://test:8080",
              },
            },
            "whitelistedConfigUrls": Array [
              "foo",
            ],
            "whitelistedPanelUrls": Array [
              "bar",
            ],
          },
          "frameId": "frameid-1",
          "installationAbilities": Object {
            "isChatEnabled": true,
          },
          "isLocal": true,
          "isPopout": false,
          "mode": "viewer",
          "type": "component",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          style={
                    Object {
                              "border": "1px solid #7D55C7",
                              "height": "10px",
                              "left": "20px",
                              "position": "absolute",
                              "top": "20px",
                              "width": "10px",
                            }
          }
>
          <ExtensionFrame
                    bindIframeToParent={[Function]}
                    channelId="twitch"
                    className="view"
                    configuration={Object {}}
                    extension={
                              Object {
                                        "authorName": "test",
                                        "bitsEnabled": false,
                                        "clientId": "mockClientId",
                                        "description": "description",
                                        "hasChatSupport": false,
                                        "iconUrl": "iconUrl",
                                        "iconUrls": Object {
                                          "square100": "100x100",
                                        },
                                        "id": "id",
                                        "name": "name",
                                        "requestIdentityLink": false,
                                        "sku": "sku",
                                        "state": "Released",
                                        "summary": "summary",
                                        "token": "token",
                                        "vendorCode": "vendorCode",
                                        "version": "0.1",
                                        "views": Object {
                                          "component": Object {
                                            "aspectHeight": 3000,
                                            "aspectWidth": 2500,
                                            "canLinkExternalContent": false,
                                            "viewerUrl": "https://test:8080",
                                            "zoom": false,
                                            "zoomPixels": 100,
                                          },
                                          "config": Object {
                                            "canLinkExternalContent": false,
                                            "viewerUrl": "https://test:8080",
                                          },
                                          "liveConfig": Object {
                                            "canLinkExternalContent": false,
                                            "viewerUrl": "https://test:8080",
                                          },
                                          "mobile": Object {
                                            "viewerUrl": "https://test:8080",
                                          },
                                          "panel": Object {
                                            "canLinkExternalContent": false,
                                            "height": 300,
                                            "viewerUrl": "https://test:8080",
                                          },
                                          "videoOverlay": Object {
                                            "canLinkExternalContent": false,
                                            "viewerUrl": "https://test:8080",
                                          },
                                        },
                                        "whitelistedConfigUrls": Array [
                                          "foo",
                                        ],
                                        "whitelistedPanelUrls": Array [
                                          "bar",
                                        ],
                                      }
                    }
                    frameId="frameid-1"
                    installationAbilities={
                              Object {
                                        "isChatEnabled": true,
                                      }
                    }
                    isLocal={true}
                    isPopout={false}
                    mode="viewer"
                    type="component"
          />
</div>,
        "className": "view component-view nono_zone",
        "style": Object {
          "height": "600px",
          "width": "800px",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ExtensionFrame
            bindIframeToParent={[Function]}
            channelId="twitch"
            className="view"
            configuration={Object {}}
            extension={
                        Object {
                                    "authorName": "test",
                                    "bitsEnabled": false,
                                    "clientId": "mockClientId",
                                    "description": "description",
                                    "hasChatSupport": false,
                                    "iconUrl": "iconUrl",
                                    "iconUrls": Object {
                                      "square100": "100x100",
                                    },
                                    "id": "id",
                                    "name": "name",
                                    "requestIdentityLink": false,
                                    "sku": "sku",
                                    "state": "Released",
                                    "summary": "summary",
                                    "token": "token",
                                    "vendorCode": "vendorCode",
                                    "version": "0.1",
                                    "views": Object {
                                      "component": Object {
                                        "aspectHeight": 3000,
                                        "aspectWidth": 2500,
                                        "canLinkExternalContent": false,
                                        "viewerUrl": "https://test:8080",
                                        "zoom": false,
                                        "zoomPixels": 100,
                                      },
                                      "config": Object {
                                        "canLinkExternalContent": false,
                                        "viewerUrl": "https://test:8080",
                                      },
                                      "liveConfig": Object {
                                        "canLinkExternalContent": false,
                                        "viewerUrl": "https://test:8080",
                                      },
                                      "mobile": Object {
                                        "viewerUrl": "https://test:8080",
                                      },
                                      "panel": Object {
                                        "canLinkExternalContent": false,
                                        "height": 300,
                                        "viewerUrl": "https://test:8080",
                                      },
                                      "videoOverlay": Object {
                                        "canLinkExternalContent": false,
                                        "viewerUrl": "https://test:8080",
                                      },
                                    },
                                    "whitelistedConfigUrls": Array [
                                      "foo",
                                    ],
                                    "whitelistedPanelUrls": Array [
                                      "bar",
                                    ],
                                  }
            }
            frameId="frameid-1"
            installationAbilities={
                        Object {
                                    "isChatEnabled": true,
                                  }
            }
            isLocal={true}
            isPopout={false}
            mode="viewer"
            type="component"
/>,
          "style": Object {
            "border": "1px solid #7D55C7",
            "height": "10px",
            "left": "20px",
            "position": "absolute",
            "top": "20px",
            "width": "10px",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "bindIframeToParent": [Function],
            "channelId": "twitch",
            "className": "view",
            "configuration": Object {},
            "extension": Object {
              "authorName": "test",
              "bitsEnabled": false,
              "clientId": "mockClientId",
              "description": "description",
              "hasChatSupport": false,
              "iconUrl": "iconUrl",
              "iconUrls": Object {
                "square100": "100x100",
              },
              "id": "id",
              "name": "name",
              "requestIdentityLink": false,
              "sku": "sku",
              "state": "Released",
              "summary": "summary",
              "token": "token",
              "vendorCode": "vendorCode",
              "version": "0.1",
              "views": Object {
                "component": Object {
                  "aspectHeight": 3000,
                  "aspectWidth": 2500,
                  "canLinkExternalContent": false,
                  "viewerUrl": "https://test:8080",
                  "zoom": false,
                  "zoomPixels": 100,
                },
                "config": Object {
                  "canLinkExternalContent": false,
                  "viewerUrl": "https://test:8080",
                },
                "liveConfig": Object {
                  "canLinkExternalContent": false,
                  "viewerUrl": "https://test:8080",
                },
                "mobile": Object {
                  "viewerUrl": "https://test:8080",
                },
                "panel": Object {
                  "canLinkExternalContent": false,
                  "height": 300,
                  "viewerUrl": "https://test:8080",
                },
                "videoOverlay": Object {
                  "canLinkExternalContent": false,
                  "viewerUrl": "https://test:8080",
                },
              },
              "whitelistedConfigUrls": Array [
                "foo",
              ],
              "whitelistedPanelUrls": Array [
                "bar",
              ],
            },
            "frameId": "frameid-1",
            "installationAbilities": Object {
              "isChatEnabled": true,
            },
            "isLocal": true,
            "isPopout": false,
            "mode": "viewer",
            "type": "component",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<ExtensionComponentView /> renders local correctly when zoom is true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExtensionComponentView
    bindIframeToParent={[Function]}
    channelId="twitch"
    configuration={Object {}}
    extension={
        Object {
            "authorName": "test",
            "bitsEnabled": false,
            "clientId": "mockClientId",
            "description": "description",
            "hasChatSupport": false,
            "iconUrl": "iconUrl",
            "iconUrls": Object {
              "square100": "100x100",
            },
            "id": "id",
            "name": "name",
            "requestIdentityLink": false,
            "sku": "sku",
            "state": "Released",
            "summary": "summary",
            "token": "token",
            "vendorCode": "vendorCode",
            "version": "0.1",
            "views": Object {
              "component": Object {
                "aspectHeight": 2000,
                "aspectWidth": 3000,
                "canLinkExternalContent": false,
                "viewerUrl": "test",
                "zoom": true,
                "zoomPixels": 1000,
              },
              "config": Object {
                "canLinkExternalContent": false,
                "viewerUrl": "test",
              },
              "liveConfig": Object {
                "canLinkExternalContent": false,
                "viewerUrl": "test",
              },
              "panel": Object {
                "canLinkExternalContent": false,
                "height": 300,
                "viewerUrl": "test",
              },
            },
            "whitelistedConfigUrls": Array [
              "foo",
            ],
            "whitelistedPanelUrls": Array [
              "bar",
            ],
          }
    }
    frameSize={
        Object {
            "height": 600,
            "width": 800,
          }
    }
    id="1"
    installationAbilities={
        Object {
            "isChatEnabled": true,
          }
    }
    isLocal={true}
    position={
        Object {
            "x": 10,
            "y": 10,
          }
    }
    role="Broadcaster"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        style={
                Object {
                        "border": "1px solid #7D55C7",
                        "height": "0.009765625px",
                        "left": "20px",
                        "position": "absolute",
                        "top": "20px",
                        "transform": "scale(1024)",
                        "transformOrigin": "0 0",
                        "width": "0.009765625px",
                      }
        }
>
        <ExtensionFrame
                bindIframeToParent={[Function]}
                channelId="twitch"
                className="view"
                configuration={Object {}}
                extension={
                        Object {
                                "authorName": "test",
                                "bitsEnabled": false,
                                "clientId": "mockClientId",
                                "description": "description",
                                "hasChatSupport": false,
                                "iconUrl": "iconUrl",
                                "iconUrls": Object {
                                  "square100": "100x100",
                                },
                                "id": "id",
                                "name": "name",
                                "requestIdentityLink": false,
                                "sku": "sku",
                                "state": "Released",
                                "summary": "summary",
                                "token": "token",
                                "vendorCode": "vendorCode",
                                "version": "0.1",
                                "views": Object {
                                  "component": Object {
                                    "aspectHeight": 2000,
                                    "aspectWidth": 3000,
                                    "canLinkExternalContent": false,
                                    "viewerUrl": "test",
                                    "zoom": true,
                                    "zoomPixels": 1000,
                                  },
                                  "config": Object {
                                    "canLinkExternalContent": false,
                                    "viewerUrl": "test",
                                  },
                                  "liveConfig": Object {
                                    "canLinkExternalContent": false,
                                    "viewerUrl": "test",
                                  },
                                  "panel": Object {
                                    "canLinkExternalContent": false,
                                    "height": 300,
                                    "viewerUrl": "test",
                                  },
                                },
                                "whitelistedConfigUrls": Array [
                                  "foo",
                                ],
                                "whitelistedPanelUrls": Array [
                                  "bar",
                                ],
                              }
                }
                frameId="frameid-1"
                installationAbilities={
                        Object {
                                "isChatEnabled": true,
                              }
                }
                isLocal={true}
                isPopout={false}
                mode="viewer"
                type="component"
        />
</div>,
      "className": "view component-view nono_zone",
      "style": Object {
        "height": "600px",
        "width": "800px",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <ExtensionFrame
          bindIframeToParent={[Function]}
          channelId="twitch"
          className="view"
          configuration={Object {}}
          extension={
                    Object {
                              "authorName": "test",
                              "bitsEnabled": false,
                              "clientId": "mockClientId",
                              "description": "description",
                              "hasChatSupport": false,
                              "iconUrl": "iconUrl",
                              "iconUrls": Object {
                                "square100": "100x100",
                              },
                              "id": "id",
                              "name": "name",
                              "requestIdentityLink": false,
                              "sku": "sku",
                              "state": "Released",
                              "summary": "summary",
                              "token": "token",
                              "vendorCode": "vendorCode",
                              "version": "0.1",
                              "views": Object {
                                "component": Object {
                                  "aspectHeight": 2000,
                                  "aspectWidth": 3000,
                                  "canLinkExternalContent": false,
                                  "viewerUrl": "test",
                                  "zoom": true,
                                  "zoomPixels": 1000,
                                },
                                "config": Object {
                                  "canLinkExternalContent": false,
                                  "viewerUrl": "test",
                                },
                                "liveConfig": Object {
                                  "canLinkExternalContent": false,
                                  "viewerUrl": "test",
                                },
                                "panel": Object {
                                  "canLinkExternalContent": false,
                                  "height": 300,
                                  "viewerUrl": "test",
                                },
                              },
                              "whitelistedConfigUrls": Array [
                                "foo",
                              ],
                              "whitelistedPanelUrls": Array [
                                "bar",
                              ],
                            }
          }
          frameId="frameid-1"
          installationAbilities={
                    Object {
                              "isChatEnabled": true,
                            }
          }
          isLocal={true}
          isPopout={false}
          mode="viewer"
          type="component"
/>,
        "style": Object {
          "border": "1px solid #7D55C7",
          "height": "0.009765625px",
          "left": "20px",
          "position": "absolute",
          "top": "20px",
          "transform": "scale(1024)",
          "transformOrigin": "0 0",
          "width": "0.009765625px",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "bindIframeToParent": [Function],
          "channelId": "twitch",
          "className": "view",
          "configuration": Object {},
          "extension": Object {
            "authorName": "test",
            "bitsEnabled": false,
            "clientId": "mockClientId",
            "description": "description",
            "hasChatSupport": false,
            "iconUrl": "iconUrl",
            "iconUrls": Object {
              "square100": "100x100",
            },
            "id": "id",
            "name": "name",
            "requestIdentityLink": false,
            "sku": "sku",
            "state": "Released",
            "summary": "summary",
            "token": "token",
            "vendorCode": "vendorCode",
            "version": "0.1",
            "views": Object {
              "component": Object {
                "aspectHeight": 2000,
                "aspectWidth": 3000,
                "canLinkExternalContent": false,
                "viewerUrl": "test",
                "zoom": true,
                "zoomPixels": 1000,
              },
              "config": Object {
                "canLinkExternalContent": false,
                "viewerUrl": "test",
              },
              "liveConfig": Object {
                "canLinkExternalContent": false,
                "viewerUrl": "test",
              },
              "panel": Object {
                "canLinkExternalContent": false,
                "height": 300,
                "viewerUrl": "test",
              },
            },
            "whitelistedConfigUrls": Array [
              "foo",
            ],
            "whitelistedPanelUrls": Array [
              "bar",
            ],
          },
          "frameId": "frameid-1",
          "installationAbilities": Object {
            "isChatEnabled": true,
          },
          "isLocal": true,
          "isPopout": false,
          "mode": "viewer",
          "type": "component",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          style={
                    Object {
                              "border": "1px solid #7D55C7",
                              "height": "0.009765625px",
                              "left": "20px",
                              "position": "absolute",
                              "top": "20px",
                              "transform": "scale(1024)",
                              "transformOrigin": "0 0",
                              "width": "0.009765625px",
                            }
          }
>
          <ExtensionFrame
                    bindIframeToParent={[Function]}
                    channelId="twitch"
                    className="view"
                    configuration={Object {}}
                    extension={
                              Object {
                                        "authorName": "test",
                                        "bitsEnabled": false,
                                        "clientId": "mockClientId",
                                        "description": "description",
                                        "hasChatSupport": false,
                                        "iconUrl": "iconUrl",
                                        "iconUrls": Object {
                                          "square100": "100x100",
                                        },
                                        "id": "id",
                                        "name": "name",
                                        "requestIdentityLink": false,
                                        "sku": "sku",
                                        "state": "Released",
                                        "summary": "summary",
                                        "token": "token",
                                        "vendorCode": "vendorCode",
                                        "version": "0.1",
                                        "views": Object {
                                          "component": Object {
                                            "aspectHeight": 2000,
                                            "aspectWidth": 3000,
                                            "canLinkExternalContent": false,
                                            "viewerUrl": "test",
                                            "zoom": true,
                                            "zoomPixels": 1000,
                                          },
                                          "config": Object {
                                            "canLinkExternalContent": false,
                                            "viewerUrl": "test",
                                          },
                                          "liveConfig": Object {
                                            "canLinkExternalContent": false,
                                            "viewerUrl": "test",
                                          },
                                          "panel": Object {
                                            "canLinkExternalContent": false,
                                            "height": 300,
                                            "viewerUrl": "test",
                                          },
                                        },
                                        "whitelistedConfigUrls": Array [
                                          "foo",
                                        ],
                                        "whitelistedPanelUrls": Array [
                                          "bar",
                                        ],
                                      }
                    }
                    frameId="frameid-1"
                    installationAbilities={
                              Object {
                                        "isChatEnabled": true,
                                      }
                    }
                    isLocal={true}
                    isPopout={false}
                    mode="viewer"
                    type="component"
          />
</div>,
        "className": "view component-view nono_zone",
        "style": Object {
          "height": "600px",
          "width": "800px",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ExtensionFrame
            bindIframeToParent={[Function]}
            channelId="twitch"
            className="view"
            configuration={Object {}}
            extension={
                        Object {
                                    "authorName": "test",
                                    "bitsEnabled": false,
                                    "clientId": "mockClientId",
                                    "description": "description",
                                    "hasChatSupport": false,
                                    "iconUrl": "iconUrl",
                                    "iconUrls": Object {
                                      "square100": "100x100",
                                    },
                                    "id": "id",
                                    "name": "name",
                                    "requestIdentityLink": false,
                                    "sku": "sku",
                                    "state": "Released",
                                    "summary": "summary",
                                    "token": "token",
                                    "vendorCode": "vendorCode",
                                    "version": "0.1",
                                    "views": Object {
                                      "component": Object {
                                        "aspectHeight": 2000,
                                        "aspectWidth": 3000,
                                        "canLinkExternalContent": false,
                                        "viewerUrl": "test",
                                        "zoom": true,
                                        "zoomPixels": 1000,
                                      },
                                      "config": Object {
                                        "canLinkExternalContent": false,
                                        "viewerUrl": "test",
                                      },
                                      "liveConfig": Object {
                                        "canLinkExternalContent": false,
                                        "viewerUrl": "test",
                                      },
                                      "panel": Object {
                                        "canLinkExternalContent": false,
                                        "height": 300,
                                        "viewerUrl": "test",
                                      },
                                    },
                                    "whitelistedConfigUrls": Array [
                                      "foo",
                                    ],
                                    "whitelistedPanelUrls": Array [
                                      "bar",
                                    ],
                                  }
            }
            frameId="frameid-1"
            installationAbilities={
                        Object {
                                    "isChatEnabled": true,
                                  }
            }
            isLocal={true}
            isPopout={false}
            mode="viewer"
            type="component"
/>,
          "style": Object {
            "border": "1px solid #7D55C7",
            "height": "0.009765625px",
            "left": "20px",
            "position": "absolute",
            "top": "20px",
            "transform": "scale(1024)",
            "transformOrigin": "0 0",
            "width": "0.009765625px",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "bindIframeToParent": [Function],
            "channelId": "twitch",
            "className": "view",
            "configuration": Object {},
            "extension": Object {
              "authorName": "test",
              "bitsEnabled": false,
              "clientId": "mockClientId",
              "description": "description",
              "hasChatSupport": false,
              "iconUrl": "iconUrl",
              "iconUrls": Object {
                "square100": "100x100",
              },
              "id": "id",
              "name": "name",
              "requestIdentityLink": false,
              "sku": "sku",
              "state": "Released",
              "summary": "summary",
              "token": "token",
              "vendorCode": "vendorCode",
              "version": "0.1",
              "views": Object {
                "component": Object {
                  "aspectHeight": 2000,
                  "aspectWidth": 3000,
                  "canLinkExternalContent": false,
                  "viewerUrl": "test",
                  "zoom": true,
                  "zoomPixels": 1000,
                },
                "config": Object {
                  "canLinkExternalContent": false,
                  "viewerUrl": "test",
                },
                "liveConfig": Object {
                  "canLinkExternalContent": false,
                  "viewerUrl": "test",
                },
                "panel": Object {
                  "canLinkExternalContent": false,
                  "height": 300,
                  "viewerUrl": "test",
                },
              },
              "whitelistedConfigUrls": Array [
                "foo",
              ],
              "whitelistedPanelUrls": Array [
                "bar",
              ],
            },
            "frameId": "frameid-1",
            "installationAbilities": Object {
              "isChatEnabled": true,
            },
            "isLocal": true,
            "isPopout": false,
            "mode": "viewer",
            "type": "component",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<ExtensionComponentView /> renders online correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExtensionComponentView
    bindIframeToParent={[Function]}
    channelId="twitch"
    configuration={Object {}}
    extension={
        Object {
            "authorName": "test",
            "bitsEnabled": false,
            "clientId": "mockClientId",
            "description": "description",
            "hasChatSupport": false,
            "iconUrl": "iconUrl",
            "iconUrls": Object {
              "square100": "100x100",
            },
            "id": "id",
            "name": "name",
            "requestIdentityLink": false,
            "sku": "sku",
            "state": "Released",
            "summary": "summary",
            "token": "token",
            "vendorCode": "vendorCode",
            "version": "0.1",
            "views": Object {
              "component": Object {
                "aspectHeight": 3000,
                "aspectWidth": 2500,
                "canLinkExternalContent": false,
                "viewerUrl": "https://test:8080",
                "zoom": false,
                "zoomPixels": 100,
              },
              "config": Object {
                "canLinkExternalContent": false,
                "viewerUrl": "https://test:8080",
              },
              "liveConfig": Object {
                "canLinkExternalContent": false,
                "viewerUrl": "https://test:8080",
              },
              "mobile": Object {
                "viewerUrl": "https://test:8080",
              },
              "panel": Object {
                "canLinkExternalContent": false,
                "height": 300,
                "viewerUrl": "https://test:8080",
              },
              "videoOverlay": Object {
                "canLinkExternalContent": false,
                "viewerUrl": "https://test:8080",
              },
            },
            "whitelistedConfigUrls": Array [
              "foo",
            ],
            "whitelistedPanelUrls": Array [
              "bar",
            ],
          }
    }
    frameSize={
        Object {
            "height": 600,
            "width": 800,
          }
    }
    id="1"
    installationAbilities={
        Object {
            "isChatEnabled": true,
          }
    }
    isLocal={false}
    position={
        Object {
            "x": 10,
            "y": 10,
          }
    }
    role="Broadcaster"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        style={
                Object {
                        "border": "1px solid #7D55C7",
                        "height": "10px",
                        "left": "20px",
                        "position": "absolute",
                        "top": "20px",
                        "width": "10px",
                      }
        }
>
        <ExtensionFrame
                bindIframeToParent={[Function]}
                channelId="twitch"
                className="view"
                configuration={Object {}}
                extension={
                        Object {
                                "authorName": "test",
                                "bitsEnabled": false,
                                "clientId": "mockClientId",
                                "description": "description",
                                "hasChatSupport": false,
                                "iconUrl": "iconUrl",
                                "iconUrls": Object {
                                  "square100": "100x100",
                                },
                                "id": "id",
                                "name": "name",
                                "requestIdentityLink": false,
                                "sku": "sku",
                                "state": "Released",
                                "summary": "summary",
                                "token": "token",
                                "vendorCode": "vendorCode",
                                "version": "0.1",
                                "views": Object {
                                  "component": Object {
                                    "aspectHeight": 3000,
                                    "aspectWidth": 2500,
                                    "canLinkExternalContent": false,
                                    "viewerUrl": "https://test:8080",
                                    "zoom": false,
                                    "zoomPixels": 100,
                                  },
                                  "config": Object {
                                    "canLinkExternalContent": false,
                                    "viewerUrl": "https://test:8080",
                                  },
                                  "liveConfig": Object {
                                    "canLinkExternalContent": false,
                                    "viewerUrl": "https://test:8080",
                                  },
                                  "mobile": Object {
                                    "viewerUrl": "https://test:8080",
                                  },
                                  "panel": Object {
                                    "canLinkExternalContent": false,
                                    "height": 300,
                                    "viewerUrl": "https://test:8080",
                                  },
                                  "videoOverlay": Object {
                                    "canLinkExternalContent": false,
                                    "viewerUrl": "https://test:8080",
                                  },
                                },
                                "whitelistedConfigUrls": Array [
                                  "foo",
                                ],
                                "whitelistedPanelUrls": Array [
                                  "bar",
                                ],
                              }
                }
                frameId="frameid-1"
                installationAbilities={
                        Object {
                                "isChatEnabled": true,
                              }
                }
                isLocal={false}
                isPopout={false}
                mode="viewer"
                type="component"
        />
</div>,
      "className": "view component-view nono_zone",
      "style": Object {
        "height": "600px",
        "width": "800px",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <ExtensionFrame
          bindIframeToParent={[Function]}
          channelId="twitch"
          className="view"
          configuration={Object {}}
          extension={
                    Object {
                              "authorName": "test",
                              "bitsEnabled": false,
                              "clientId": "mockClientId",
                              "description": "description",
                              "hasChatSupport": false,
                              "iconUrl": "iconUrl",
                              "iconUrls": Object {
                                "square100": "100x100",
                              },
                              "id": "id",
                              "name": "name",
                              "requestIdentityLink": false,
                              "sku": "sku",
                              "state": "Released",
                              "summary": "summary",
                              "token": "token",
                              "vendorCode": "vendorCode",
                              "version": "0.1",
                              "views": Object {
                                "component": Object {
                                  "aspectHeight": 3000,
                                  "aspectWidth": 2500,
                                  "canLinkExternalContent": false,
                                  "viewerUrl": "https://test:8080",
                                  "zoom": false,
                                  "zoomPixels": 100,
                                },
                                "config": Object {
                                  "canLinkExternalContent": false,
                                  "viewerUrl": "https://test:8080",
                                },
                                "liveConfig": Object {
                                  "canLinkExternalContent": false,
                                  "viewerUrl": "https://test:8080",
                                },
                                "mobile": Object {
                                  "viewerUrl": "https://test:8080",
                                },
                                "panel": Object {
                                  "canLinkExternalContent": false,
                                  "height": 300,
                                  "viewerUrl": "https://test:8080",
                                },
                                "videoOverlay": Object {
                                  "canLinkExternalContent": false,
                                  "viewerUrl": "https://test:8080",
                                },
                              },
                              "whitelistedConfigUrls": Array [
                                "foo",
                              ],
                              "whitelistedPanelUrls": Array [
                                "bar",
                              ],
                            }
          }
          frameId="frameid-1"
          installationAbilities={
                    Object {
                              "isChatEnabled": true,
                            }
          }
          isLocal={false}
          isPopout={false}
          mode="viewer"
          type="component"
/>,
        "style": Object {
          "border": "1px solid #7D55C7",
          "height": "10px",
          "left": "20px",
          "position": "absolute",
          "top": "20px",
          "width": "10px",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "bindIframeToParent": [Function],
          "channelId": "twitch",
          "className": "view",
          "configuration": Object {},
          "extension": Object {
            "authorName": "test",
            "bitsEnabled": false,
            "clientId": "mockClientId",
            "description": "description",
            "hasChatSupport": false,
            "iconUrl": "iconUrl",
            "iconUrls": Object {
              "square100": "100x100",
            },
            "id": "id",
            "name": "name",
            "requestIdentityLink": false,
            "sku": "sku",
            "state": "Released",
            "summary": "summary",
            "token": "token",
            "vendorCode": "vendorCode",
            "version": "0.1",
            "views": Object {
              "component": Object {
                "aspectHeight": 3000,
                "aspectWidth": 2500,
                "canLinkExternalContent": false,
                "viewerUrl": "https://test:8080",
                "zoom": false,
                "zoomPixels": 100,
              },
              "config": Object {
                "canLinkExternalContent": false,
                "viewerUrl": "https://test:8080",
              },
              "liveConfig": Object {
                "canLinkExternalContent": false,
                "viewerUrl": "https://test:8080",
              },
              "mobile": Object {
                "viewerUrl": "https://test:8080",
              },
              "panel": Object {
                "canLinkExternalContent": false,
                "height": 300,
                "viewerUrl": "https://test:8080",
              },
              "videoOverlay": Object {
                "canLinkExternalContent": false,
                "viewerUrl": "https://test:8080",
              },
            },
            "whitelistedConfigUrls": Array [
              "foo",
            ],
            "whitelistedPanelUrls": Array [
              "bar",
            ],
          },
          "frameId": "frameid-1",
          "installationAbilities": Object {
            "isChatEnabled": true,
          },
          "isLocal": false,
          "isPopout": false,
          "mode": "viewer",
          "type": "component",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          style={
                    Object {
                              "border": "1px solid #7D55C7",
                              "height": "10px",
                              "left": "20px",
                              "position": "absolute",
                              "top": "20px",
                              "width": "10px",
                            }
          }
>
          <ExtensionFrame
                    bindIframeToParent={[Function]}
                    channelId="twitch"
                    className="view"
                    configuration={Object {}}
                    extension={
                              Object {
                                        "authorName": "test",
                                        "bitsEnabled": false,
                                        "clientId": "mockClientId",
                                        "description": "description",
                                        "hasChatSupport": false,
                                        "iconUrl": "iconUrl",
                                        "iconUrls": Object {
                                          "square100": "100x100",
                                        },
                                        "id": "id",
                                        "name": "name",
                                        "requestIdentityLink": false,
                                        "sku": "sku",
                                        "state": "Released",
                                        "summary": "summary",
                                        "token": "token",
                                        "vendorCode": "vendorCode",
                                        "version": "0.1",
                                        "views": Object {
                                          "component": Object {
                                            "aspectHeight": 3000,
                                            "aspectWidth": 2500,
                                            "canLinkExternalContent": false,
                                            "viewerUrl": "https://test:8080",
                                            "zoom": false,
                                            "zoomPixels": 100,
                                          },
                                          "config": Object {
                                            "canLinkExternalContent": false,
                                            "viewerUrl": "https://test:8080",
                                          },
                                          "liveConfig": Object {
                                            "canLinkExternalContent": false,
                                            "viewerUrl": "https://test:8080",
                                          },
                                          "mobile": Object {
                                            "viewerUrl": "https://test:8080",
                                          },
                                          "panel": Object {
                                            "canLinkExternalContent": false,
                                            "height": 300,
                                            "viewerUrl": "https://test:8080",
                                          },
                                          "videoOverlay": Object {
                                            "canLinkExternalContent": false,
                                            "viewerUrl": "https://test:8080",
                                          },
                                        },
                                        "whitelistedConfigUrls": Array [
                                          "foo",
                                        ],
                                        "whitelistedPanelUrls": Array [
                                          "bar",
                                        ],
                                      }
                    }
                    frameId="frameid-1"
                    installationAbilities={
                              Object {
                                        "isChatEnabled": true,
                                      }
                    }
                    isLocal={false}
                    isPopout={false}
                    mode="viewer"
                    type="component"
          />
</div>,
        "className": "view component-view nono_zone",
        "style": Object {
          "height": "600px",
          "width": "800px",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ExtensionFrame
            bindIframeToParent={[Function]}
            channelId="twitch"
            className="view"
            configuration={Object {}}
            extension={
                        Object {
                                    "authorName": "test",
                                    "bitsEnabled": false,
                                    "clientId": "mockClientId",
                                    "description": "description",
                                    "hasChatSupport": false,
                                    "iconUrl": "iconUrl",
                                    "iconUrls": Object {
                                      "square100": "100x100",
                                    },
                                    "id": "id",
                                    "name": "name",
                                    "requestIdentityLink": false,
                                    "sku": "sku",
                                    "state": "Released",
                                    "summary": "summary",
                                    "token": "token",
                                    "vendorCode": "vendorCode",
                                    "version": "0.1",
                                    "views": Object {
                                      "component": Object {
                                        "aspectHeight": 3000,
                                        "aspectWidth": 2500,
                                        "canLinkExternalContent": false,
                                        "viewerUrl": "https://test:8080",
                                        "zoom": false,
                                        "zoomPixels": 100,
                                      },
                                      "config": Object {
                                        "canLinkExternalContent": false,
                                        "viewerUrl": "https://test:8080",
                                      },
                                      "liveConfig": Object {
                                        "canLinkExternalContent": false,
                                        "viewerUrl": "https://test:8080",
                                      },
                                      "mobile": Object {
                                        "viewerUrl": "https://test:8080",
                                      },
                                      "panel": Object {
                                        "canLinkExternalContent": false,
                                        "height": 300,
                                        "viewerUrl": "https://test:8080",
                                      },
                                      "videoOverlay": Object {
                                        "canLinkExternalContent": false,
                                        "viewerUrl": "https://test:8080",
                                      },
                                    },
                                    "whitelistedConfigUrls": Array [
                                      "foo",
                                    ],
                                    "whitelistedPanelUrls": Array [
                                      "bar",
                                    ],
                                  }
            }
            frameId="frameid-1"
            installationAbilities={
                        Object {
                                    "isChatEnabled": true,
                                  }
            }
            isLocal={false}
            isPopout={false}
            mode="viewer"
            type="component"
/>,
          "style": Object {
            "border": "1px solid #7D55C7",
            "height": "10px",
            "left": "20px",
            "position": "absolute",
            "top": "20px",
            "width": "10px",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "bindIframeToParent": [Function],
            "channelId": "twitch",
            "className": "view",
            "configuration": Object {},
            "extension": Object {
              "authorName": "test",
              "bitsEnabled": false,
              "clientId": "mockClientId",
              "description": "description",
              "hasChatSupport": false,
              "iconUrl": "iconUrl",
              "iconUrls": Object {
                "square100": "100x100",
              },
              "id": "id",
              "name": "name",
              "requestIdentityLink": false,
              "sku": "sku",
              "state": "Released",
              "summary": "summary",
              "token": "token",
              "vendorCode": "vendorCode",
              "version": "0.1",
              "views": Object {
                "component": Object {
                  "aspectHeight": 3000,
                  "aspectWidth": 2500,
                  "canLinkExternalContent": false,
                  "viewerUrl": "https://test:8080",
                  "zoom": false,
                  "zoomPixels": 100,
                },
                "config": Object {
                  "canLinkExternalContent": false,
                  "viewerUrl": "https://test:8080",
                },
                "liveConfig": Object {
                  "canLinkExternalContent": false,
                  "viewerUrl": "https://test:8080",
                },
                "mobile": Object {
                  "viewerUrl": "https://test:8080",
                },
                "panel": Object {
                  "canLinkExternalContent": false,
                  "height": 300,
                  "viewerUrl": "https://test:8080",
                },
                "videoOverlay": Object {
                  "canLinkExternalContent": false,
                  "viewerUrl": "https://test:8080",
                },
              },
              "whitelistedConfigUrls": Array [
                "foo",
              ],
              "whitelistedPanelUrls": Array [
                "bar",
              ],
            },
            "frameId": "frameid-1",
            "installationAbilities": Object {
              "isChatEnabled": true,
            },
            "isLocal": false,
            "isPopout": false,
            "mode": "viewer",
            "type": "component",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<ExtensionComponentView /> renders online correctly when zoom is true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExtensionComponentView
    bindIframeToParent={[Function]}
    channelId="twitch"
    configuration={Object {}}
    extension={
        Object {
            "authorName": "test",
            "bitsEnabled": false,
            "clientId": "mockClientId",
            "description": "description",
            "hasChatSupport": false,
            "iconUrl": "iconUrl",
            "iconUrls": Object {
              "square100": "100x100",
            },
            "id": "id",
            "name": "name",
            "requestIdentityLink": false,
            "sku": "sku",
            "state": "Released",
            "summary": "summary",
            "token": "token",
            "vendorCode": "vendorCode",
            "version": "0.1",
            "views": Object {
              "component": Object {
                "aspectHeight": 2000,
                "aspectWidth": 3000,
                "canLinkExternalContent": false,
                "viewerUrl": "test",
                "zoom": true,
                "zoomPixels": 1000,
              },
              "config": Object {
                "canLinkExternalContent": false,
                "viewerUrl": "test",
              },
              "liveConfig": Object {
                "canLinkExternalContent": false,
                "viewerUrl": "test",
              },
              "panel": Object {
                "canLinkExternalContent": false,
                "height": 300,
                "viewerUrl": "test",
              },
            },
            "whitelistedConfigUrls": Array [
              "foo",
            ],
            "whitelistedPanelUrls": Array [
              "bar",
            ],
          }
    }
    frameSize={
        Object {
            "height": 600,
            "width": 800,
          }
    }
    id="1"
    installationAbilities={
        Object {
            "isChatEnabled": true,
          }
    }
    isLocal={false}
    position={
        Object {
            "x": 10,
            "y": 10,
          }
    }
    role="Broadcaster"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        style={
                Object {
                        "border": "1px solid #7D55C7",
                        "height": "0.009765625px",
                        "left": "20px",
                        "position": "absolute",
                        "top": "20px",
                        "transform": "scale(1024)",
                        "transformOrigin": "0 0",
                        "width": "0.009765625px",
                      }
        }
>
        <ExtensionFrame
                bindIframeToParent={[Function]}
                channelId="twitch"
                className="view"
                configuration={Object {}}
                extension={
                        Object {
                                "authorName": "test",
                                "bitsEnabled": false,
                                "clientId": "mockClientId",
                                "description": "description",
                                "hasChatSupport": false,
                                "iconUrl": "iconUrl",
                                "iconUrls": Object {
                                  "square100": "100x100",
                                },
                                "id": "id",
                                "name": "name",
                                "requestIdentityLink": false,
                                "sku": "sku",
                                "state": "Released",
                                "summary": "summary",
                                "token": "token",
                                "vendorCode": "vendorCode",
                                "version": "0.1",
                                "views": Object {
                                  "component": Object {
                                    "aspectHeight": 2000,
                                    "aspectWidth": 3000,
                                    "canLinkExternalContent": false,
                                    "viewerUrl": "test",
                                    "zoom": true,
                                    "zoomPixels": 1000,
                                  },
                                  "config": Object {
                                    "canLinkExternalContent": false,
                                    "viewerUrl": "test",
                                  },
                                  "liveConfig": Object {
                                    "canLinkExternalContent": false,
                                    "viewerUrl": "test",
                                  },
                                  "panel": Object {
                                    "canLinkExternalContent": false,
                                    "height": 300,
                                    "viewerUrl": "test",
                                  },
                                },
                                "whitelistedConfigUrls": Array [
                                  "foo",
                                ],
                                "whitelistedPanelUrls": Array [
                                  "bar",
                                ],
                              }
                }
                frameId="frameid-1"
                installationAbilities={
                        Object {
                                "isChatEnabled": true,
                              }
                }
                isLocal={false}
                isPopout={false}
                mode="viewer"
                type="component"
        />
</div>,
      "className": "view component-view nono_zone",
      "style": Object {
        "height": "600px",
        "width": "800px",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <ExtensionFrame
          bindIframeToParent={[Function]}
          channelId="twitch"
          className="view"
          configuration={Object {}}
          extension={
                    Object {
                              "authorName": "test",
                              "bitsEnabled": false,
                              "clientId": "mockClientId",
                              "description": "description",
                              "hasChatSupport": false,
                              "iconUrl": "iconUrl",
                              "iconUrls": Object {
                                "square100": "100x100",
                              },
                              "id": "id",
                              "name": "name",
                              "requestIdentityLink": false,
                              "sku": "sku",
                              "state": "Released",
                              "summary": "summary",
                              "token": "token",
                              "vendorCode": "vendorCode",
                              "version": "0.1",
                              "views": Object {
                                "component": Object {
                                  "aspectHeight": 2000,
                                  "aspectWidth": 3000,
                                  "canLinkExternalContent": false,
                                  "viewerUrl": "test",
                                  "zoom": true,
                                  "zoomPixels": 1000,
                                },
                                "config": Object {
                                  "canLinkExternalContent": false,
                                  "viewerUrl": "test",
                                },
                                "liveConfig": Object {
                                  "canLinkExternalContent": false,
                                  "viewerUrl": "test",
                                },
                                "panel": Object {
                                  "canLinkExternalContent": false,
                                  "height": 300,
                                  "viewerUrl": "test",
                                },
                              },
                              "whitelistedConfigUrls": Array [
                                "foo",
                              ],
                              "whitelistedPanelUrls": Array [
                                "bar",
                              ],
                            }
          }
          frameId="frameid-1"
          installationAbilities={
                    Object {
                              "isChatEnabled": true,
                            }
          }
          isLocal={false}
          isPopout={false}
          mode="viewer"
          type="component"
/>,
        "style": Object {
          "border": "1px solid #7D55C7",
          "height": "0.009765625px",
          "left": "20px",
          "position": "absolute",
          "top": "20px",
          "transform": "scale(1024)",
          "transformOrigin": "0 0",
          "width": "0.009765625px",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "bindIframeToParent": [Function],
          "channelId": "twitch",
          "className": "view",
          "configuration": Object {},
          "extension": Object {
            "authorName": "test",
            "bitsEnabled": false,
            "clientId": "mockClientId",
            "description": "description",
            "hasChatSupport": false,
            "iconUrl": "iconUrl",
            "iconUrls": Object {
              "square100": "100x100",
            },
            "id": "id",
            "name": "name",
            "requestIdentityLink": false,
            "sku": "sku",
            "state": "Released",
            "summary": "summary",
            "token": "token",
            "vendorCode": "vendorCode",
            "version": "0.1",
            "views": Object {
              "component": Object {
                "aspectHeight": 2000,
                "aspectWidth": 3000,
                "canLinkExternalContent": false,
                "viewerUrl": "test",
                "zoom": true,
                "zoomPixels": 1000,
              },
              "config": Object {
                "canLinkExternalContent": false,
                "viewerUrl": "test",
              },
              "liveConfig": Object {
                "canLinkExternalContent": false,
                "viewerUrl": "test",
              },
              "panel": Object {
                "canLinkExternalContent": false,
                "height": 300,
                "viewerUrl": "test",
              },
            },
            "whitelistedConfigUrls": Array [
              "foo",
            ],
            "whitelistedPanelUrls": Array [
              "bar",
            ],
          },
          "frameId": "frameid-1",
          "installationAbilities": Object {
            "isChatEnabled": true,
          },
          "isLocal": false,
          "isPopout": false,
          "mode": "viewer",
          "type": "component",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          style={
                    Object {
                              "border": "1px solid #7D55C7",
                              "height": "0.009765625px",
                              "left": "20px",
                              "position": "absolute",
                              "top": "20px",
                              "transform": "scale(1024)",
                              "transformOrigin": "0 0",
                              "width": "0.009765625px",
                            }
          }
>
          <ExtensionFrame
                    bindIframeToParent={[Function]}
                    channelId="twitch"
                    className="view"
                    configuration={Object {}}
                    extension={
                              Object {
                                        "authorName": "test",
                                        "bitsEnabled": false,
                                        "clientId": "mockClientId",
                                        "description": "description",
                                        "hasChatSupport": false,
                                        "iconUrl": "iconUrl",
                                        "iconUrls": Object {
                                          "square100": "100x100",
                                        },
                                        "id": "id",
                                        "name": "name",
                                        "requestIdentityLink": false,
                                        "sku": "sku",
                                        "state": "Released",
                                        "summary": "summary",
                                        "token": "token",
                                        "vendorCode": "vendorCode",
                                        "version": "0.1",
                                        "views": Object {
                                          "component": Object {
                                            "aspectHeight": 2000,
                                            "aspectWidth": 3000,
                                            "canLinkExternalContent": false,
                                            "viewerUrl": "test",
                                            "zoom": true,
                                            "zoomPixels": 1000,
                                          },
                                          "config": Object {
                                            "canLinkExternalContent": false,
                                            "viewerUrl": "test",
                                          },
                                          "liveConfig": Object {
                                            "canLinkExternalContent": false,
                                            "viewerUrl": "test",
                                          },
                                          "panel": Object {
                                            "canLinkExternalContent": false,
                                            "height": 300,
                                            "viewerUrl": "test",
                                          },
                                        },
                                        "whitelistedConfigUrls": Array [
                                          "foo",
                                        ],
                                        "whitelistedPanelUrls": Array [
                                          "bar",
                                        ],
                                      }
                    }
                    frameId="frameid-1"
                    installationAbilities={
                              Object {
                                        "isChatEnabled": true,
                                      }
                    }
                    isLocal={false}
                    isPopout={false}
                    mode="viewer"
                    type="component"
          />
</div>,
        "className": "view component-view nono_zone",
        "style": Object {
          "height": "600px",
          "width": "800px",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ExtensionFrame
            bindIframeToParent={[Function]}
            channelId="twitch"
            className="view"
            configuration={Object {}}
            extension={
                        Object {
                                    "authorName": "test",
                                    "bitsEnabled": false,
                                    "clientId": "mockClientId",
                                    "description": "description",
                                    "hasChatSupport": false,
                                    "iconUrl": "iconUrl",
                                    "iconUrls": Object {
                                      "square100": "100x100",
                                    },
                                    "id": "id",
                                    "name": "name",
                                    "requestIdentityLink": false,
                                    "sku": "sku",
                                    "state": "Released",
                                    "summary": "summary",
                                    "token": "token",
                                    "vendorCode": "vendorCode",
                                    "version": "0.1",
                                    "views": Object {
                                      "component": Object {
                                        "aspectHeight": 2000,
                                        "aspectWidth": 3000,
                                        "canLinkExternalContent": false,
                                        "viewerUrl": "test",
                                        "zoom": true,
                                        "zoomPixels": 1000,
                                      },
                                      "config": Object {
                                        "canLinkExternalContent": false,
                                        "viewerUrl": "test",
                                      },
                                      "liveConfig": Object {
                                        "canLinkExternalContent": false,
                                        "viewerUrl": "test",
                                      },
                                      "panel": Object {
                                        "canLinkExternalContent": false,
                                        "height": 300,
                                        "viewerUrl": "test",
                                      },
                                    },
                                    "whitelistedConfigUrls": Array [
                                      "foo",
                                    ],
                                    "whitelistedPanelUrls": Array [
                                      "bar",
                                    ],
                                  }
            }
            frameId="frameid-1"
            installationAbilities={
                        Object {
                                    "isChatEnabled": true,
                                  }
            }
            isLocal={false}
            isPopout={false}
            mode="viewer"
            type="component"
/>,
          "style": Object {
            "border": "1px solid #7D55C7",
            "height": "0.009765625px",
            "left": "20px",
            "position": "absolute",
            "top": "20px",
            "transform": "scale(1024)",
            "transformOrigin": "0 0",
            "width": "0.009765625px",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "bindIframeToParent": [Function],
            "channelId": "twitch",
            "className": "view",
            "configuration": Object {},
            "extension": Object {
              "authorName": "test",
              "bitsEnabled": false,
              "clientId": "mockClientId",
              "description": "description",
              "hasChatSupport": false,
              "iconUrl": "iconUrl",
              "iconUrls": Object {
                "square100": "100x100",
              },
              "id": "id",
              "name": "name",
              "requestIdentityLink": false,
              "sku": "sku",
              "state": "Released",
              "summary": "summary",
              "token": "token",
              "vendorCode": "vendorCode",
              "version": "0.1",
              "views": Object {
                "component": Object {
                  "aspectHeight": 2000,
                  "aspectWidth": 3000,
                  "canLinkExternalContent": false,
                  "viewerUrl": "test",
                  "zoom": true,
                  "zoomPixels": 1000,
                },
                "config": Object {
                  "canLinkExternalContent": false,
                  "viewerUrl": "test",
                },
                "liveConfig": Object {
                  "canLinkExternalContent": false,
                  "viewerUrl": "test",
                },
                "panel": Object {
                  "canLinkExternalContent": false,
                  "height": 300,
                  "viewerUrl": "test",
                },
              },
              "whitelistedConfigUrls": Array [
                "foo",
              ],
              "whitelistedPanelUrls": Array [
                "bar",
              ],
            },
            "frameId": "frameid-1",
            "installationAbilities": Object {
              "isChatEnabled": true,
            },
            "isLocal": false,
            "isPopout": false,
            "mode": "viewer",
            "type": "component",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
